Genericise helper method name to transform_and_sanitize

--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -14,4 +14,4 @@
           = event.description
           - if event&.note.present?
             %div{ class: 'govuk-!-padding-top-1' }
-              = display_crlf_and_sanitize(event.note)
+              = transform_and_sanitize(event.note)
