--- a/app/views/hearings/_court_applications.html.haml
+++ b/app/views/hearings/_court_applications.html.haml
@@ -1,53 +1,61 @@
+%h2.govuk-heading-m
+  = t('hearings.show.court_applications.heading')
 - if hearing&.court_applications.present?
-  %h2.govuk-heading-m
-    = t('hearings.show.court_applications.heading')
-
-  - decorate_each(hearing.court_applications) do |court_application|
-    %table.govuk-table
-      %caption.govuk-table__caption.govuk-visually-hidden
-        = t('hearings.show.court_applications.caption')
-      %tbody.govuk-table__body
-        %tr.govuk-table__row
-          %th.govuk-table__header{ scope: 'row' }
-            = t('hearings.show.court_applications.received_date')
-          %td.govuk-table__cell
-            = court_application.received_date&.to_date&.strftime('%d/%m/%Y')
-        %tr.govuk-table__row
-          %th.govuk-table__header{ scope: 'row' }
-            = t('hearings.show.court_applications.type')
-          %td.govuk-table__cell
-            = court_application&.type&.description || t('generic.not_available')
-        %tr.govuk-table__row
-          %th.govuk-table__header{ scope: 'row' }
-            = t('hearings.show.court_applications.code')
-          %td.govuk-table__cell
-            = court_application&.type&.code || t('generic.not_available')
-        %tr.govuk-table__row
-          %th.govuk-table__header{ scope: 'row' }
-            = t('hearings.show.court_applications.legislation')
-          %td.govuk-table__cell
-            = court_application&.type&.legislation  || t('generic.not_available')
-        - court_application.judicial_results&.each do |result|
-          %tr.govuk-table__row
-            %th.govuk-table__header{ scope: 'row' }
-              = t('hearings.show.court_applications.result_codes')
-            %td.govuk-table__cell
-              = result&.cjs_code || t('generic.not_available')
-          %tr.govuk-table__row
-            %th.govuk-table__header{ scope: 'row' }
-              = t('hearings.show.court_applications.result_text')
-            %td.govuk-table__cell
-              - if result&.text.present?
-                = transform_and_sanitize(result&.text)
-              - else
-                t('generic.not_available')
-        %tr.govuk-table__row
-          %th.govuk-table__header{ scope: 'row' }
-            = t('hearings.show.court_applications.respondent_synonyms')
-          %td.govuk-table__cell
-            = court_application.respondent_list
-        %tr.govuk-table__row
-          %th.govuk-table__header{ scope: 'row' }
-            = t('hearings.show.court_applications.applicant_synonym')
-          %td.govuk-table__cell
-            = court_application.applicant_synonym
+  %div.govuk-accordion#accordion-with-summary-sections{:data => {:module => "govuk-accordion"}}
+    - decorate_each(hearing.court_applications) do |court_application|
+      %div.govuk-accordion__section
+        %div.govuk-accordion__section-header
+          %h3.govuk-accordion__section-heading
+            %span.govuk-accordion__section-button
+              = court_application&.type&.description || t('generic.not_available')
+          %div.govuk-accordion__section-summary.govuk-body
+            = court_application.received_date&.to_date&.strftime('%d %B %Y')
+        %div.govuk-accordion__section-content.govuk-details__text
+          %dl.govuk-summary-list
+            %div.govuk-summary-list__row
+              %dt.govuk-summary-list__key
+                = t('hearings.show.court_applications.received_date')
+              %dd.govuk-summary-list__value
+                = court_application.received_date&.to_date&.strftime('%d %B %Y')
+            %div.govuk-summary-list__row
+              %dt.govuk-summary-list__key
+                = t('hearings.show.court_applications.type')
+              %dd.govuk-summary-list__value
+                = court_application&.type&.description || t('generic.not_available')
+            %div.govuk-summary-list__row
+              %dt.govuk-summary-list__key
+                = t('hearings.show.court_applications.code')
+              %dd.govuk-summary-list__value
+                = court_application&.type&.code || t('generic.not_available')
+            %div.govuk-summary-list__row
+              %dt.govuk-summary-list__key
+                = t('hearings.show.court_applications.legislation')
+              %dd.govuk-summary-list__value
+                = court_application&.type&.legislation  || t('generic.not_available')
+            - court_application.judicial_results&.each do |result|
+              %div.govuk-summary-list__row
+                %dt.govuk-summary-list__key
+                  = t('hearings.show.court_applications.result_codes')
+                %dd.govuk-summary-list__value
+                  = result&.cjs_code || t('generic.not_available')
+              %div.govuk-summary-list__row
+                %dt.govuk-summary-list__key
+                  = t('hearings.show.court_applications.result_text')
+                %dd.govuk-summary-list__value
+                  - if result&.text.present?
+                    = transform_and_sanitize(result&.text)
+                  - else
+                    t('generic.not_available')
+            %div.govuk-summary-list__row
+              %dt.govuk-summary-list__key
+                = t('hearings.show.court_applications.respondent_synonyms')
+              %dd.govuk-summary-list__value
+                = court_application.respondent_list
+            %div.govuk-summary-list__row
+              %dt.govuk-summary-list__key
+                = t('hearings.show.court_applications.applicant_synonym')
+              %dd.govuk-summary-list__value
+                = court_application.applicant_synonym
+- else
+  %p.govuk-body
+    = t('hearings.show.court_applications.none')
