--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -14,6 +14,7 @@ $govuk-image-url-function: frontend-image-url;
 
 @import "components/cookie_banner";
 @import "components/forms";
+@import "components/custom_styles";
 @import "components/hearing_events";
 @import "components/sortable_table";
 @import "components/summary";
