--- a/app/views/hearings/_court_applications.html.haml
+++ b/app/views/hearings/_court_applications.html.haml
@@ -1,44 +1,44 @@
 %h2.govuk-heading-m
   = t('hearings.show.court_applications.heading')
 - if hearing&.court_applications.present?
-  %div.govuk-accordion{:data => {:module => "govuk-accordion"}, :id => "accordion-" + @prosecution_case.prosecution_case_reference + "-" + @hearing_day&.strftime('%Y%m%d')}
+  .govuk-accordion{:data => {:module => "govuk-accordion"}, :id => "accordion-" + @hearing.id}
     - decorate_each(hearing.court_applications) do |court_application|
-      %div.govuk-accordion__section
-        %div.govuk-accordion__section-header
+      .govuk-accordion__section
+        .govuk-accordion__section-header
           %h3.govuk-accordion__section-heading
             %span.govuk-accordion__section-button
               = court_application&.type&.description || t('generic.not_available')
-          %div.govuk-accordion__section-summary.govuk-body
+          .govuk-accordion__section-summary.govuk-body
             = l(court_application.received_date&.to_date, :format => :long)
-        %div.govuk-accordion__section-content.govuk-details__text
+        .govuk-accordion__section-content.govuk-details__text
           %dl.govuk-summary-list
-            %div.govuk-summary-list__row
+            .govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.received_date')
               %dd.govuk-summary-list__value
                 = l(court_application.received_date&.to_date, :format => :long)
-            %div.govuk-summary-list__row
+            .govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.type')
               %dd.govuk-summary-list__value
                 = court_application&.type&.description || t('generic.not_available')
-            %div.govuk-summary-list__row
+            .govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.code')
               %dd.govuk-summary-list__value
                 = court_application&.type&.code || t('generic.not_available')
-            %div.govuk-summary-list__row
+            .govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.legislation')
               %dd.govuk-summary-list__value
                 = court_application&.type&.legislation  || t('generic.not_available')
             - court_application.judicial_results&.each do |result|
-              %div.govuk-summary-list__row
+              .govuk-summary-list__row
                 %dt.govuk-summary-list__key
                   = t('hearings.show.court_applications.result_codes')
                 %dd.govuk-summary-list__value
                   = result&.cjs_code || t('generic.not_available')
-              %div.govuk-summary-list__row
+              .govuk-summary-list__row
                 %dt.govuk-summary-list__key
                   = t('hearings.show.court_applications.result_text')
                 %dd.govuk-summary-list__value
@@ -46,12 +46,12 @@
                     = transform_and_sanitize(result&.text)
                   - else
                     = t('generic.not_available')
-            %div.govuk-summary-list__row
+            .govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.respondent_synonyms')
               %dd.govuk-summary-list__value
                 = court_application.respondent_list
-            %div.govuk-summary-list__row
+            .govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.applicant_synonym')
               %dd.govuk-summary-list__value
