--- a/app/views/layouts/_phase_banner.html.haml
+++ b/app/views/layouts/_phase_banner.html.haml
@@ -1,7 +1,10 @@
 .govuk-phase-banner
   %p.govuk-phase-banner__content
     %strong.govuk-tag.govuk-phase-banner__content__tag
-      = t('generic.alpha')
+      - if ENV['ENV'] == 'production'
+        = t('generic.alpha')
+      - else
+        = ENV['ENV'] || ENV['RAILS_ENV']
     %span.govuk-phase-banner__text
       = t('layouts.application.header.phase_banner_html', feedback: new_feedback_path)
 
