Add with_env spec support helper
and test that banner displays alpha when env is production, and
uat when env is uat

--- a/app/views/layouts/_phase_banner.html.haml
+++ b/app/views/layouts/_phase_banner.html.haml
@@ -1,10 +1,10 @@
-.govuk-phase-banner
+.govuk-phase-banner{ class: ENV['ENV'] }
   %p.govuk-phase-banner__content
     %strong.govuk-tag.govuk-phase-banner__content__tag
-      - if ENV['ENV'] == 'production'
-        = t('generic.alpha')
+      - if %w(uat staging dev).include? ENV['ENV']
+        = ENV['ENV']
       - else
-        = ENV['ENV'] || ENV['RAILS_ENV']
+        = t('generic.alpha')
     %span.govuk-phase-banner__text
       = t('layouts.application.header.phase_banner_html', feedback: new_feedback_path)
 
