--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
 
     = render partial: 'layouts/cookie_banner'
 
-    %header.govuk-header{"data-module" => "govuk-header", role: "banner"}
+    %header.govuk-header{"data-module" => "govuk-header", role: "banner", class: ENV['ENV'] }
       .govuk-header__container.govuk-width-container
         .govuk-header__logo
           = render 'layouts/govuk_logo'
