--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -18,3 +18,4 @@ $govuk-image-url-function: frontend-image-url;
 @import "components/hearing_events";
 @import "components/sortable_table";
 @import "components/summary";
+@import "components/phase_banner";
