Make changes requested in PR comments
1) Use single quotes rather than double quotes in _phase_banner.scss
2) Rename variables in _phase_banner.scss from - to -
3) Add tests for other environments to layout_spec.rb

--- a/app/webpack/stylesheets/components/_phase_banner.scss
+++ b/app/webpack/stylesheets/components/_phase_banner.scss
@@ -1,33 +1,33 @@
-$laa-uat-colour: govuk-colour("orange");
-$laa-staging-colour: govuk-colour("turquoise");
-$laa-dev-colour: govuk-colour("pink");
+$app-uat-colour: govuk-colour('orange');
+$app-staging-colour: govuk-colour('turquoise');
+$app-dev-colour: govuk-colour('pink');
 
 .uat {
   .govuk-header__container {
-    border-bottom-color: $laa-uat-colour;
+    border-bottom-color: $app-uat-colour;
   }
 
   .govuk-tag.govuk-phase-banner__content__tag {
-    background-color: $laa-uat-colour;
+    background-color: $app-uat-colour;
   }
 }
 
 .staging {
   .govuk-header__container {
-    border-bottom-color: $laa-staging-colour;
+    border-bottom-color: $app-staging-colour;
   }
 
   .govuk-tag.govuk-phase-banner__content__tag {
-    background-color: $laa-staging-colour;
+    background-color: $app-staging-colour;
   }
 }
 
 .dev {
   .govuk-header__container {
-    border-bottom-color: $laa-dev-colour;
+    border-bottom-color: $app-dev-colour;
   }
 
   .govuk-tag.govuk-phase-banner__content__tag {
-    background-color: $laa-dev-colour;
+    background-color: $app-dev-colour;
   }
 }
