Made further changes requested in pr comments
1. Added class to body
2. Expanded class name
3. Added new colour for when running locally and display 'local'

--- a/app/views/layouts/_phase_banner.html.haml
+++ b/app/views/layouts/_phase_banner.html.haml
@@ -1,10 +1,10 @@
 .govuk-phase-banner{ class: ENV['ENV'] }
   %p.govuk-phase-banner__content
     %strong.govuk-tag.govuk-phase-banner__content__tag
-      - if %w(uat staging dev).include? ENV['ENV']
-        = ENV['ENV']
-      - else
+      - if ENV['ENV'] == 'production'
         = t('generic.alpha')
+      - else
+        = ENV['ENV'] || 'local'
     %span.govuk-phase-banner__text
       = t('layouts.application.header.phase_banner_html', feedback: new_feedback_path)
 
