AAC-146 Error Pages

--- a/app/views/errors/internal_error.html.haml
+++ b/app/views/errors/internal_error.html.haml
@@ -1,4 +1,4 @@
 = govuk_page_title(t('error.500_title'))
 
-%p= t('error.500_message')
-%p= t('error.description_html')
+%p.govuk-body= t('error.500_message')
+%p.govuk-body= t('error.description_html')
