--- a/app/views/errors/not_found.html.haml
+++ b/app/views/errors/not_found.html.haml
@@ -1,4 +1,5 @@
 = govuk_page_title(t('error.404_title'))
 
-%p= t('error.404_message')
-%p= t('error.description_html')
+%p.govuk-body= t('error.404_message')
+%p.govuk-body= t('error.404_message_2')
+%p.govuk-body= t('error.description_html')
