--- a/app/views/layouts/_cookie_banner.html.haml
+++ b/app/views/layouts/_cookie_banner.html.haml
@@ -1,17 +1,21 @@
-.app-cookie-banner.app-cookie-banner--hidden.govuk-cookie-banner{"aria-label": "Cookies on View Court Data", role: "region", data: { module: "app-cookie-banner", nosnippet: ""}}
-  .govuk-cookie-banner__message.govuk-width-container
-    .govuk-grid-row
-      .govuk-grid-column-two-thirds
-        %h2.govuk-cookie-banner__heading.govuk-heading-m
-          =t('layouts.application.cookies.title')
-        .govuk-cookie-banner__content
-          %p
-            =t('layouts.application.cookies.essential_cookies')
-          %p
-            =t('layouts.application.cookies.analytics_cookies')
-    .govuk-button-group
-      %button.govuk-button{'data-accept-cookies': 'true', "data-module" => "govuk-button", name: "cookies", type: "button", value: "accept"}
-        =t('layouts.application.cookies.accept_cookies')
-      %button.govuk-button{'data-reject-cookies': 'true', "data-module" => "govuk-button", name: "cookies", type: "button", value: "reject"}
-        =t('layouts.application.cookies.refuse_cookies')
-      = link_to t('layouts.application.cookies.view_cookies'), cookies_path, class: 'govuk-link'
+- unless @cookies_preferences_set
+  .app-cookie-banner.app-cookie-banner.govuk-cookie-banner{"aria-label": "Cookies on View Court Data", role: "region", data: { module: "app-cookie-banner", nosnippet: ""}}
+    .govuk-cookie-banner__message.govuk-width-container
+      .govuk-grid-row
+        .govuk-grid-column-two-thirds
+          %h2.govuk-cookie-banner__heading.govuk-heading-m
+            = t('layouts.application.cookies.title')
+          .govuk-cookie-banner__content
+            %p
+              = t('layouts.application.cookies.essential_cookies')
+            %p
+              = t('layouts.application.cookies.analytics_cookies')
+
+      .govuk-button-group
+        %a.govuk-button{'data-accept-cookies': 'true', 'data-module': 'govuk-button', name: 'cookies', type: 'button', value: 'accept',
+          'href': '?usage_opt_in=true&show_confirmation=true'}
+          = t('layouts.application.cookies.accept_cookies')
+        %a.govuk-button{'data-reject-cookies': 'true', 'data-module': 'govuk-button', name: 'cookies', type: 'button', value: 'reject',
+          'href': '?usage_opt_in=false&show_confirmation=true'}
+          = t('layouts.application.cookies.refuse_cookies')
+        = link_to t('layouts.application.cookies.view_cookies'), cookies_path, class: 'govuk-link'
