AAC-168 Notification Banner Helper and Spec Tests

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -15,6 +15,7 @@ $govuk-image-url-function: frontend-image-url;
 @import "components/forms";
 @import "components/custom_styles";
 @import "components/hearing_events";
+@import "components/notification_banner";
 @import "components/sortable_table";
 @import "components/summary";
 @import "components/phase_banner";
