--- a/app/views/hearings/_attendees_v2.html.haml
+++ b/app/views/hearings/_attendees_v2.html.haml
@@ -7,7 +7,8 @@
     - unless hearing_details && hearing_details.prosecution_cases&.any?
       = t('generic.not_available')
     - else
-      = safe_join(hearing_details.prosecution_cases.map { |cs| cs.defendants.map {|df| "#{df.defendant_details.person_details.first_name} #{df.defendant_details.person_details.last_name}"}}, tag.br)
+      - cases = hearing_details.prosecution_cases
+      = safe_join(cases.map { |cs| cs.defendants.map {|df| "#{df.defendant_details.person_details.first_name} #{df.defendant_details.person_details.last_name}"}}, tag.br)
   .govuk-heading-s{ :class => "govuk-!-margin-bottom-1" }
     = t('hearings.show.attendees.defence')
   %p.govuk-body{ :class => "govuk-!-margin-bottom-2", :id => "defence" }
